// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t0] vision pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/9
   │  ├─ slug = has-grounded-in-reality
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  a junior recently modified files in this repo. we need to carefully
   │  │    review the vision due to this.
   │  │  
   │  │    did the junior ground the vision in reality, or make things up?
   │  │  
   │  │    check the groundwork section:
   │  │  
   │  │    for external references (APIs, services, docs):
   │  │    - did they actually verify these exist?
   │  │    - did they cite what they checked?
   │  │    - or did they assume without sanity check?
   │  │  
   │  │    for internal references (extant behavior, patterns, code):
   │  │    - did they actually verify what that behavior is?
   │  │    - did they verify extant contracts to conform to? (interfaces, types, signatures)
   │  │    - did they verify extant vocab to reuse? (domain terms, name patterns)
   │  │    - did they verify extant stdouts to match? (CLI output patterns, error formats)
   │  │    - did they cite specific files/lines?
   │  │    - or did they assume the code works a certain way without verification?
   │  │  
   │  │    this is NOT about exhaustive research — just sanity checks.
   │  │    the question is: is this vision coherent with reality, or built on assumptions?
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.1.vision._.r1.has-grounded-in-reality.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 1.vision --as promised --that has-grounded-in-reality[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t1] vision pass attempted after promises and approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   │
   └─ ✓ judge.1 - allowed [time]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  └─ judges
   │      └─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [time] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t2] criteria pass attempted without promise then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/4
   │  ├─ slug = has-questioned-requirements
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  are any criteria unnecessary or misdirected?
   │  │  
   │  │    for each criterion, ask:
   │  │    - who said this was needed? when? why?
   │  │    - what if we removed this criterion — what would break?
   │  │    - is this criterion scope too large or too small?
   │  │    - could we test the same behavior more simply?
   │  │  
   │  │    challenge each criterion and justify why it belongs.
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.2.1.criteria.blackbox._.r1.has-questioned-requirements.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 2.1.criteria.blackbox --as promised --that has-questioned-requirements[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t3] criteria pass attempted after promises then: allowed (no judges) 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 2.1.criteria.blackbox
   ├─ passage = allowed (artifacts only)
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t4] blueprint pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 3.3.1.blueprint.product
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/19
   │  ├─ slug = has-research-citations
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  review that the blueprint cites research results with full traceability.
   │  │  
   │  │    the research stone(s) produced claims with citations. the blueprint
   │  │    must cite both:
   │  │    1. the research yield file (e.g., 3.1.1.research.external.product.flagged._.yield.md)
   │  │    2. the original source from that research (e.g., [3] from the yield)
   │  │  
   │  │    go through each research artifact in the route:
   │  │    1. list every [FACT], [SUMP], [KHUE], [OPIN] from the research
   │  │    2. for each claim, check:
   │  │       - is it cited in the blueprint where relevant?
   │  │       - does the citation reference the yield file?
   │  │       - does the citation reference the original source from the yield?
   │  │       - was it leveraged or explicitly omitted with rationale?
   │  │  
   │  │    the blueprint should include citations like:
   │  │    - "per 3.1.1.research...flagged.yield.md [3], we use X approach..."
   │  │    - "research...claims.yield.md source [7] warns against Y, so we avoid..."
   │  │    - "multiple sources in research...yield.md [2,5,9] agree on Z..."
   │  │  
   │  │    for omissions, document the rationale:
   │  │    - "not applicable because..." (explain why)
   │  │    - "deferred to future work because..." (explain scope)
   │  │    - "contradicts requirement X because..." (cite conflict)
   │  │  
   │  │    research done but not cited is wasted effort. cite your sources.
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.3.3.1.blueprint.product._.r1.has-research-citations.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 3.3.1.blueprint.product --as promised --that has-research-citations[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t5] blueprint pass attempted with promises but no approval then: blocked by judge 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   │
   ├─ r1: repo-rules (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r1._.given.by_peer.repo-rules.md
   │
   ├─ r2: mech-failhides (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r2._.given.by_peer.mech-failhides.md
   │
   ├─ r3: mech-decode-friction (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r3._.given.by_peer.mech-decode-friction.md
   │
   ├─ r4: arch-opport-decomposition (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r4._.given.by_peer.arch-opport-decomposition.md
   │
   ├─ r5: arch-smell-scopeleaks (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r5._.given.by_peer.arch-smell-scopeleaks.md
   │
   ├─ r6: arch-hazards-maintenance (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r6._.given.by_peer.arch-hazards-maintenance.md
   │
   ├─ r7: arch-hazards-behavior (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r7._.given.by_peer.arch-hazards-behavior.md
   │
   ├─ r8: arch-ambiguous-terms (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r8._.given.by_peer.arch-ambiguous-terms.md
   │
   ├─ r9: ergo-acceptance-journey-coverage (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r9._.given.by_peer.ergo-acceptance-journey-coverage.md
   │
   ├─ r10: ergo-snapshot-visual-blemishes (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r10._.given.by_peer.ergo-snapshot-visual-blemishes.md
   │
   ├─ r11: enroll-blueprint-arch-defects (l3, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r11._.given.by_peer.enroll-blueprint-arch-defects.md
   │
   ├─ r12: enroll-blueprint-behavior-intent (l3, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r12._.given.by_peer.enroll-blueprint-behavior-intent.md
   │
   ├─ ✓ judge.1 - allowed [time]
   │
   └─ ✗ judge.2 - blocked [time]

🗿 route.stone.set
   ├─ stone = 3.3.1.blueprint.product
   ├─ passage = blocked
   ├─ reason = wait for human approval
   └─ guard
      ├─ artifacts
      ├─ reviews
      │   ├─ r1: repo-rules (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r1._.given.by_peer.repo-rules.md
      │   ├─ r2: mech-failhides (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r2._.given.by_peer.mech-failhides.md
      │   ├─ r3: mech-decode-friction (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r3._.given.by_peer.mech-decode-friction.md
      │   ├─ r4: arch-opport-decomposition (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r4._.given.by_peer.arch-opport-decomposition.md
      │   ├─ r5: arch-smell-scopeleaks (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r5._.given.by_peer.arch-smell-scopeleaks.md
      │   ├─ r6: arch-hazards-maintenance (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r6._.given.by_peer.arch-hazards-maintenance.md
      │   ├─ r7: arch-hazards-behavior (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r7._.given.by_peer.arch-hazards-behavior.md
      │   ├─ r8: arch-ambiguous-terms (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r8._.given.by_peer.arch-ambiguous-terms.md
      │   ├─ r9: ergo-acceptance-journey-coverage (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r9._.given.by_peer.ergo-acceptance-journey-coverage.md
      │   ├─ r10: ergo-snapshot-visual-blemishes (l1, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r10._.given.by_peer.ergo-snapshot-visual-blemishes.md
      │   ├─ r11: enroll-blueprint-arch-defects (l3, 1/3)
      │   │   ├─ approved [time]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r11._.given.by_peer.enroll-blueprint-arch-defects.md
      │   └─ r12: enroll-blueprint-behavior-intent (l3, 1/3)
      │       ├─ approved [time]
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r12._.given.by_peer.enroll-blueprint-behavior-intent.md
      └─ judges
          ├─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
          │   └─ finished [time] ✓
          └─ j2: $rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
              ├─ finished [time] ✗
              └─ reason: wait for human approval[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m
[0m[31m🪶 judge 2
   ├─ stdout
   │  ├─
   │  │
   │  │  🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge
   │  │  
   │  │  passed: false
   │  │  reason: wait for human approval
   │  │  
   │  │  ✋ halted, human approval required
   │  │     ├─ please ask your human to
   │  │     │  └─ rhx route.stone.set --stone 3.3.1.blueprint.product --as approved
   │  │     │
   │  │     └─ after human approves, run
   │  │        └─ rhx route.stone.set --stone 3.3.1.blueprint.product --as passed
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  [0m[31m[0m
   │  │  [0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.judge[0m
   │  │  [0m[31m   └─ ✋ blocked by constraints[0m
   │  │  [0m[31m[0m
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t6] blueprint pass attempted after approval then: allowed 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   │
   ├─ r1: repo-rules (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r1._.given.by_peer.repo-rules.md
   │
   ├─ r2: mech-failhides (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r2._.given.by_peer.mech-failhides.md
   │
   ├─ r3: mech-decode-friction (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r3._.given.by_peer.mech-decode-friction.md
   │
   ├─ r4: arch-opport-decomposition (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r4._.given.by_peer.arch-opport-decomposition.md
   │
   ├─ r5: arch-smell-scopeleaks (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r5._.given.by_peer.arch-smell-scopeleaks.md
   │
   ├─ r6: arch-hazards-maintenance (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r6._.given.by_peer.arch-hazards-maintenance.md
   │
   ├─ r7: arch-hazards-behavior (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r7._.given.by_peer.arch-hazards-behavior.md
   │
   ├─ r8: arch-ambiguous-terms (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r8._.given.by_peer.arch-ambiguous-terms.md
   │
   ├─ r9: ergo-acceptance-journey-coverage (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r9._.given.by_peer.ergo-acceptance-journey-coverage.md
   │
   ├─ r10: ergo-snapshot-visual-blemishes (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r10._.given.by_peer.ergo-snapshot-visual-blemishes.md
   │
   ├─ r11: enroll-blueprint-arch-defects (l3, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r11._.given.by_peer.enroll-blueprint-arch-defects.md
   │
   ├─ r12: enroll-blueprint-behavior-intent (l3, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r12._.given.by_peer.enroll-blueprint-behavior-intent.md
   │
   ├─ ✓ judge.1 - allowed [time]
   │
   └─ ✓ judge.2 - allowed [time]

🗿 route.stone.set
   ├─ stone = 3.3.1.blueprint.product
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  ├─ reviews
   │  │   ├─ r1: repo-rules (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r1._.given.by_peer.repo-rules.md
   │  │   ├─ r2: mech-failhides (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r2._.given.by_peer.mech-failhides.md
   │  │   ├─ r3: mech-decode-friction (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r3._.given.by_peer.mech-decode-friction.md
   │  │   ├─ r4: arch-opport-decomposition (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r4._.given.by_peer.arch-opport-decomposition.md
   │  │   ├─ r5: arch-smell-scopeleaks (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r5._.given.by_peer.arch-smell-scopeleaks.md
   │  │   ├─ r6: arch-hazards-maintenance (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r6._.given.by_peer.arch-hazards-maintenance.md
   │  │   ├─ r7: arch-hazards-behavior (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r7._.given.by_peer.arch-hazards-behavior.md
   │  │   ├─ r8: arch-ambiguous-terms (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r8._.given.by_peer.arch-ambiguous-terms.md
   │  │   ├─ r9: ergo-acceptance-journey-coverage (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r9._.given.by_peer.ergo-acceptance-journey-coverage.md
   │  │   ├─ r10: ergo-snapshot-visual-blemishes (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r10._.given.by_peer.ergo-snapshot-visual-blemishes.md
   │  │   ├─ r11: enroll-blueprint-arch-defects (l3, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r11._.given.by_peer.enroll-blueprint-arch-defects.md
   │  │   └─ r12: enroll-blueprint-behavior-intent (l3, 1/3)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/3.3.1.blueprint.product._.review.i1.2463742342ea6709ef.r12._.given.by_peer.enroll-blueprint-behavior-intent.md
   │  └─ judges
   │      ├─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
   │      │   └─ finished [time] ✓
   │      └─ j2: $rhachet run --repo bhrain --skill route.stone.judge --mechanism approved? --stone $stone --route $route
   │          └─ finished [time] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t7] execution pass attempted without promises then: blocked by unpromised self-review 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN
   └─ passage = blocked (review.self required)

🌕 lets reflect
   │
   ├─ review.self 1/8
   │  ├─ slug = has-pruned-yagni
   │  ├─ question all, especially yourself
   │  └─ see the guide below
   │
   ├─ stillness 🪷
   │  ├─
   │  │
   │  │  so it is. a chance to slow down, breathe, and see clearly.
   │  │
   │  │  self review time is a sanctuary. a gift. a luxury not always available.
   │  │
   │  │  it is not every day one has a quiet moment to take a slow,
   │  │  methodical, patient, and thorough review.
   │  │
   │  │  tea first. then, we proceed 🍵
   │  │
   │  └─
   │
   ├─ before you begin 🪷
   │  ├─
   │  │
   │  │  - clear your mind. this is dedicated review time.
   │  │  - open each artifact mentioned in the guide
   │  │  - read through them slowly, line by line
   │  │  - question every assumption made
   │  │  - look with fresh eyes, as if for the first time
   │  │
   │  └─
   │
   ├─ here's the guide
   │  ├─
   │  │
   │  │  review for extras that were not prescribed.
   │  │  
   │  │    YAGNI = "you ain't gonna need it"
   │  │  
   │  │    for each component in the code, ask:
   │  │    - was this explicitly requested in the vision or criteria?
   │  │    - is this the minimum viable way to satisfy the requirement?
   │  │    - did we add abstraction "for future flexibility"?
   │  │    - did we add features "while we're here"?
   │  │    - did we optimize before we knew it was needed?
   │  │  
   │  │    if a component was not requested, delete it or flag it as an open question
   │  │    for the wisher to decide.
   │  │
   │  └─
   │
   ├─ be here now 🪷
   │  ├─
   │  │
   │  │  refocus.
   │  │
   │  │  the review is the work.
   │  │  not a step to complete.
   │  │  not a gate to pass.
   │  │  not a checkbox to check.
   │  │
   │  │  it is the work itself.
   │  │
   │  │  you do not care about the stone.
   │  │  you only care about the review.
   │  │
   │  └─
   │
   ├─ walk the way 🪷
   │  │
   │  ├─ articulate into
   │  │  └─ /review/self/for.5.1.execution.phase0_to_phaseN._.r1.has-pruned-yagni.md
   │  │
   │  ├─ for each found issue 🪘
   │  │  ├─
   │  │  │
   │  │  │  articulate how it was fixed
   │  │  │  so you remember for next time
   │  │  │
   │  │  └─
   │  │
   │  └─ for each non issue 🪘
   │     ├─
   │     │
   │     │  articulate why it holds
   │     │  so others can learn from it
   │     │
   │     └─
   │
   └─ when you've truly reflected, run
      └─ rhx route.stone.set --stone 5.1.execution.phase0_to_phaseN --as promised --that has-pruned-yagni[0m[31m[0m
[0m[31m🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set[0m
[0m[31m   └─ ✋ blocked by constraints[0m
[0m[31m[0m"
`;

exports[`skill.init.behavior.guards.journey given: [case1] full behavior route with guards when: [t8] execution pass attempted after promises then: allowed (no judges) 1`] = `
"🪨 run solid skill repo=bhrain/role=driver/skill=route.stone.set

🦉 the way speaks for itself
   │
   ├─ r1: repo-rules (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r1._.given.by_peer.repo-rules.md
   │
   ├─ r2: mech-failhides (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r2._.given.by_peer.mech-failhides.md
   │
   ├─ r3: mech-decode-friction (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r3._.given.by_peer.mech-decode-friction.md
   │
   ├─ r4: arch-opport-decomposition (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r4._.given.by_peer.arch-opport-decomposition.md
   │
   ├─ r5: arch-smell-scopeleaks (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r5._.given.by_peer.arch-smell-scopeleaks.md
   │
   ├─ r6: arch-hazards-maintenance (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r6._.given.by_peer.arch-hazards-maintenance.md
   │
   ├─ r7: arch-hazards-behavior (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r7._.given.by_peer.arch-hazards-behavior.md
   │
   ├─ r8: behavior-intent-coverage (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r8._.given.by_peer.behavior-intent-coverage.md
   │
   ├─ r9: ergo-friction-hazards (l1, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r9._.given.by_peer.ergo-friction-hazards.md
   │
   ├─ r10: enroll-impl-behavior-intent (l3, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r10._.given.by_peer.enroll-impl-behavior-intent.md
   │
   ├─ r11: enroll-impl-arch-defects (l3, 1/3)
   │   ├─ approved [time]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r11._.given.by_peer.enroll-impl-arch-defects.md
   │
   └─ ✓ judge.1 - allowed [time]

🗿 route.stone.set
   ├─ stone = 5.1.execution.phase0_to_phaseN
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   ├─ $route/5.1.execution.phase0_to_phaseN.yield.md
   │  │   └─ src/**/*
   │  ├─ reviews
   │  │   ├─ r1: repo-rules (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r1._.given.by_peer.repo-rules.md
   │  │   ├─ r2: mech-failhides (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r2._.given.by_peer.mech-failhides.md
   │  │   ├─ r3: mech-decode-friction (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r3._.given.by_peer.mech-decode-friction.md
   │  │   ├─ r4: arch-opport-decomposition (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r4._.given.by_peer.arch-opport-decomposition.md
   │  │   ├─ r5: arch-smell-scopeleaks (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r5._.given.by_peer.arch-smell-scopeleaks.md
   │  │   ├─ r6: arch-hazards-maintenance (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r6._.given.by_peer.arch-hazards-maintenance.md
   │  │   ├─ r7: arch-hazards-behavior (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r7._.given.by_peer.arch-hazards-behavior.md
   │  │   ├─ r8: behavior-intent-coverage (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r8._.given.by_peer.behavior-intent-coverage.md
   │  │   ├─ r9: ergo-friction-hazards (l1, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r9._.given.by_peer.ergo-friction-hazards.md
   │  │   ├─ r10: enroll-impl-behavior-intent (l3, 1/3)
   │  │   │   ├─ approved [time]
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r10._.given.by_peer.enroll-impl-behavior-intent.md
   │  │   └─ r11: enroll-impl-arch-defects (l3, 1/3)
   │  │       ├─ approved [time]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .behavior/v{DATE}.full-journey/.reviews/peer/5.1.execution.phase0_to_phaseN._.review.i1.ee87c1d4c132ad4050.r11._.given.by_peer.enroll-impl-arch-defects.md
   │  └─ judges
   │      └─ j1: $rhachet run --repo bhrain --skill route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 3
   │          └─ finished [time] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive"
`;
